ajax rest api test

--- a/platform/client/index.html
+++ b/platform/client/index.html
@@ -135,6 +135,7 @@
 		        <h4 class="modal-title">메신저 선택</h4>
 		      </div>
 		      <div class="modal-body">
+              <!-- main.js include class linkbtn-->
 		        <button type="button"  id="kakao" class="btn btn-secondary btn-block kakao-background white btn-custom linkbtn"><strong>카카오톡 링크 공유</strong></button>
 		        <button type="button"  id="line" class="btn btn-secondary btn-block line-background white btn-custom linkbtn"><strong>라인 링크 공유(개발중)</strong></button>
 		        <button type="button"  id="telegram" class="btn btn-secondary btn-block telegram-background white btn-custom linkbtn"><strong>텔레그램링크 공유(개발중)</strong></button>
