developer page create

--- a/platform/client/index.html
+++ b/platform/client/index.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">시조새 IO</a>
+                <a class="navbar-brand" href="#">Arachne</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -45,6 +45,12 @@
                     <li>
                         <a href="#">Network Supports</a>
                     </li>
+                    <li>
+                        <a href="#">Register Game</a>
+                    </li>
+                    <li>
+                        <a href="https://a-better.github.io/">For Developer</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -56,8 +62,9 @@
 
         <!-- Jumbotron Header -->
         <header class="jumbotron hero-spacer">
-            <h1>시조새 IO</h1>
-            <p>메신저 링크로 친구와 함꼐 다양한 웹게임을 즐겨보세요!<br/>저희 게임플랫폼에 게임을 등록하고 싶다면 아래의 버튼을 클릭해주세요. 웹 게임 개발자를 위해 네트워크 API를 지원해줍니다!</p>
+            <h1>Arachne</h1>
+            <p>메신저 링크로 친구와 함꼐 다양한 웹게임을 즐겨보세요!<br/>게임을 등록하고 싶다면 상단의 Register Game을 누르세요</p>
+            <br/><p>개발자 관련 페이지로 가려면 상단의 For Developer를 누르세요</p>
             <p><a class="btn btn-primary btn-large">Contact Us</a>
             </p>
         </header>
