--- a/platform/client/index.html
+++ b/platform/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>시조새 IO</title>
+    <title>Project Arachne - Webgame Platform with messenger</title>
     <!-- Bootstrap Core CSS -->
     <link href="lib/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
