--- a/platform/client/index.html
+++ b/platform/client/index.html
@@ -11,6 +11,7 @@
 
     <title>Arachne - Web game Platform with Messenger</title>
 
+    <link href="css/arachne.css" rel="stylesheet">
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -49,10 +50,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">GameList</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">GameList</a>
                     </li>
                     <li>
                         <a href="https://a-better.github.io/">Developer</a>
@@ -94,65 +95,36 @@
             </div>
             <div class="row">
             <!-- col-sm-4 == 33% -->
-                <div class="col-sm-4 portfolio-item">
-                    <!-- ? 마크인것이다. -->
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            
-                        </div>
-                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" width=50% height=50%>
-                        <i class="fa fa-search-plus fa-2x">CatchMind</i>
+                <div class="thirdsize">
+                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" max-width=100% max-height=100%>
+                        <i class="fa fa-2x">CatchMind</i>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            
-                        </div>
+                <div class="thirdsize">
                         <img src="/images/mafia.jpg" class="img-responsive" alt="" width=50% height=50%>
                         <div class="caption-content">
-                                <i class="fa fa-search-plus fa-2x">Mafia</i>
+                                <i class="fa fa-2x">Mafia</i>
                             </div>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                <div class="thirdsize">
+                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" max-width=100% max-height=100%>
+                        <i class="fa fa-2x">CatchMind</i>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
+                <div class="thirdsize">
+                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" max-width=100% max-height=100%>
+                        <i class="fa fa-2x">CatchMind</i>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                <div class="thirdsize">
+                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" max-width=100% max-height=100%>
+                        <i class="fa fa-2x">CatchMind</i>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                <div class="thirdsize">
+                        <img src="/images/catchmind.jpg" class="img-responsive" alt="" max-width=100% max-height=100%>
+                        <i class="fa fa-2x">CatchMind</i>
                     </a>
                 </div>
             </div>
